"Place in line" table is collapsable but is horrible on mobile view (need to figure out how to make it stop overlapping other elements)

--- a/client/src/app/components/student-session-view/student-session-view.component.scss
+++ b/client/src/app/components/student-session-view/student-session-view.component.scss
@@ -11,12 +11,14 @@ h1{
   margin: 5px;
 }
 
-
+.tHeader{
+      background: lighten(DodgerBlue, 30%);
+}
 .tbody {
     tr:nth-child(odd) > td:nth-child(odd) {
-        background: lighten(DodgerBlue, 30%); }
-    tr:nth-child(even) > td:nth-child(odd) {
         background: lighten(DodgerBlue, 40%); }
+    tr:nth-child(even) > td:nth-child(odd) {
+        background: lighten(DodgerBlue, 30%); }
 }
 
 .positionT{
